Prepare for 2026.6